--- a/tgc-oplog-component/pom.xml
+++ b/tgc-oplog-component/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.colinger.tc</groupId>
-    <artifactId>tc-oplog-component</artifactId>
+    <groupId>io.colinger.tgc</groupId>
+    <artifactId>tgc-oplog-component</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>tc-oplog-component</name>
+    <name>tgc-oplog-component</name>
     <url>https://colinger.github.io</url>
 
     <properties>
